logs/exceptions.log
2025-06-25 22:09:49 [31merror[39m: D:\POS_for_small_shop\pos_backend\controllers\user.controller.js:30
logg    next(error);
        ^^^^

SyntaxError: Unexpected identifier 'next'
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at Module._compile (node:internal/modules/cjs/loader:1528:20)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (D:\POS_for_small_shop\pos_backend\routes\user.route.js:3:24)
2025-06-25 22:09:50 [31merror[39m: D:\POS_for_small_shop\pos_backend\controllers\user.controller.js:30
logger    next(error);
          ^^^^

SyntaxError: Unexpected identifier 'next'
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at Module._compile (node:internal/modules/cjs/loader:1528:20)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (D:\POS_for_small_shop\pos_backend\routes\user.route.js:3:24)
